syntax = "proto3";

option go_package = "v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "api/v1/common.proto";

package v1;

message PrivilegePolicy {
    oneof set_privileged {
        bool privileged                 = 1;
    }
    repeated string drop_capabilities   = 2;
    repeated string add_capabilities    = 3;
}

